--- a/lib/prompt_templates/shared_forecast.erb
+++ b/lib/prompt_templates/shared_forecast.erb
@@ -7,8 +7,12 @@ Here is a summary of relevant data from your research assistant:
 <%= @research_output -%>
 </research>
 
-1. Today is <%= Time.now.strftime('%B %d, %Y') %>. Consider the time remaining before the outcome of the question will become known.
-<%- unless %w[sonar-reasoning sonar-reasoning-pro sonar-deep-research].include?(llm.model) -%>
-2. Before providing your forecast, show step-by-step reasoning in clear, logical order starting with <think> on the line before and ending with </think> on the line after.
-<%- end -%>
+Today is <%= Time.now.strftime('%B %d, %Y') %>.
 
+<%- unless %w[sonar-reasoning sonar-reasoning-pro sonar-deep-research].include?(llm.model) -%>
+- Before providing your forecast, show step-by-step reasoning in clear, logical order starting with <think> on the line before and ending with </think> on the line after.
+<%- end -%>
+- Before providing your forecast, write:
+  - The time remaining before the outcome of the question will become known.
+  - The status quo outcome if nothing changed.
+  - The expectations of experts and markets.
