--- a/lib/prompt_templates/forecast.erb
+++ b/lib/prompt_templates/forecast.erb
@@ -25,10 +25,9 @@ Criteria for determining forecast outcome, which have not yet been met:
 <%= question.criteria_content %>
 </criteria>
 <%- unless question.aggregate_content.empty? -%>
-<%- if false -%>
-Existing Metaculus Forecasts Aggregate:
-<aggregate>
+
+Existing Metaculus Community Aggregates:
+<aggregates>
 <%= question.aggregate_content %>
-</aggregate>
-<%- end -%>
+</aggregates>
 <%- end -%>
