feat(template): add forecast options header
- Improves readability of forecast template
- Adds a clear section header for forecast options
- Preserves existing template logic and data rendering

--- a/lib/prompt_templates/forecast.erb
+++ b/lib/prompt_templates/forecast.erb
@@ -3,6 +3,8 @@ Forecast Question:
 <%= question.title %>
 </question>
 <%- if question.options && !question.options.empty? -%>
+
+Forecast Options:
 <options>
 <%= question.options %>
 </options>
