--- a/lib/prompt_templates/review_research.erb
+++ b/lib/prompt_templates/review_research.erb
@@ -7,7 +7,7 @@ Here is the summary of relevant data that was prepared:
 <%= @research_output %>
 </research>
 
-<%- unless %w[sonar-reasoning sonar-reasoning-pro sonar-deep-research].include?(llm.model) -%>
+<%- unless %w[deepseek-reasoner sonar-reasoning sonar-reasoning-pro sonar-deep-research].include?(llm.model) -%>
 - Before responding, show step-by-step reasoning in clear, logical order starting with `<think>` on the line before and ending with `</think>` on the line after.
 <%- end -%>
 - After responding, provide actionable recommendations to improve the prompt's effectiveness with reasoning explanations starting with `<reflect>` on the line before and ending with `</reflect>` on the line after.
