--- a/lib/prompt_templates/forecast_consensus.erb
+++ b/lib/prompt_templates/forecast_consensus.erb
@@ -1,4 +1,6 @@
-Review these predictions from other superforecasters:
+# Context
+
+Your consensus forecast will be based on the context of these predictions from other superforecasters.
 
 <forecasts>
 <%- @revised_forecasts.each do |forecast| -%>
@@ -8,9 +10,12 @@ Review these predictions from other superforecasters:
 <%- end -%>
 </forecasts>
 
-- Summarize the consensus as a consensus forecast.
+
+# Instructions
+
+- Summarize the consensus of the forecasts.
 - Before responding, show step-by-step reasoning in clear, logical order starting with <think> on the line before and ending with </think> on the line after.
-- Before your forecast, write:
+- Before summarizing the consensus, write:
   - The time remaining before the outcome of the question will become known.
   - The status quo outcome if nothing changed.
   - The expectations of experts and markets.
