feat(prompts): refine forecasting template language
- Replaced "content" with "context" in forecast template
- Updated terminology from "predictions" to "forecasts" in multiple templates
- Slightly adjusted language in system and shared instructions for clarity
- Removed unnecessary blank lines
- No functional code changes, only semantic text improvements

--- a/lib/prompt_templates/forecast_consensus.erb
+++ b/lib/prompt_templates/forecast_consensus.erb
@@ -1,6 +1,6 @@
 # Context
 
-Your consensus forecast will be based on the context of these predictions from other superforecasters.
+Your consensus forecast will be based on the context of these forecasts from other superforecasters.
 
 <forecasts>
 <%- @revised_forecasts.each do |forecast| -%>
@@ -9,7 +9,6 @@ Your consensus forecast will be based on the context of these predictions from o
 </forecast>
 <%- end -%>
 </forecasts>
-
 
 # Instructions
 
