--- a/lib/prompt_templates/forecast_delphi.erb
+++ b/lib/prompt_templates/forecast_delphi.erb
@@ -1,6 +1,6 @@
 # Context
 
-You will update your forecast based on the context of these predictions from other superforecasters.
+You will update your forecast based on the context of these forecasts from other superforecasters.
 
 <forecasts>
 <%- @forecasts.each do |f| -%>
