feat: update forecast template to strip think and reflect blocks
- Add 'think' as an additional parameter to `stripped_content` method
- Modifies both consensus and delphi forecast prompt templates
- Potentially enhances reasoning extraction during forecast generation

--- a/lib/prompt_templates/forecast_consensus.erb
+++ b/lib/prompt_templates/forecast_consensus.erb
@@ -5,7 +5,7 @@ Your consensus forecast will be based on the context of these forecasts from oth
 <forecasts>
 <%- @revised_forecasts.each do |forecast| -%>
 <forecast>
-<%= forecast.stripped_content('reflect') %>
+<%= forecast.stripped_content('think', 'reflect') %>
 </forecast>
 <%- end -%>
 </forecasts>
