feat(workflow): migrate from news to deepnews generation
- Rename workflow job from `news` to `deepnews`
- Update script references from `news.rb` to `deepnews.rb`
- Modify cache and file paths to use `deepnews` naming
- Adjust GitHub workflow to use new deepnews generation process
- Update research template to use new deepnews content
- Modify utility functions to support new deepnews loading

--- a/lib/prompt_templates/research.erb
+++ b/lib/prompt_templates/research.erb
@@ -4,7 +4,10 @@ Your research will focus on the following forecast context.
 
 <%= @forecast_prompt -%>
 
-<%= @news_output -%>
+Forecast Question Related News:
+<news>
+<%= @deepnews_output -%>
+</news>
 
 # Instructions
 
