swap back to news (deepnews very quickly ran out of quota)

--- a/lib/prompt_templates/research.erb
+++ b/lib/prompt_templates/research.erb
@@ -6,7 +6,7 @@ Your research will focus on the following forecast context.
 
 Forecast Question Related News:
 <news>
-<%= @deepnews_output -%>
+<%= @news_output -%>
 </news>
 
 # Instructions
